# RecBole

./: inference.py  pyproject.toml  run_recbole.py  run_recbole_ex.py
recbole/data/: utils.py
recbole/data/dataset/: dataset.py
recbole/properties/: overall.yaml
recbole/properties/dataset/: bibly.yaml  url.yaml
recbole/properties/quick_start_config/: context-aware_bibly.yaml
recbole/quick_start/: quick_start.py
